--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 /* adjust path as needed */
-@import "../node_modules/font-awesome/scss/font-awesome.scss";
+@import "../../node_modules/font-awesome/scss/font-awesome.scss";
 
 
 /* use the font */
